--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,16 @@
 a {
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(240, 197, 205);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(219, 177, 184);
+}
