--- a/src/component/body/body.css
+++ b/src/component/body/body.css
@@ -9,7 +9,9 @@
     flex-direction: column !important;
     align-items: center;
 }
+
 .text {
     color: #616087;
     font-weight: 700;
+    padding-right: 9px;
 }
