add pages and products

--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -1,6 +1,10 @@
+:root{
+    --primary-color: #FDF7F2;
+    --text-color: #EDB7AD;
+}
 .footer {
     margin-top: 30px;
-    background-color: beige;
+    background-color: var(--primary-color);
 }
 
 .name {
