--- a/src/component/body/body.css
+++ b/src/component/body/body.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&family=Roboto+Slab:wght@300;400&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100&display=swap');
+
+*{
+    font-family: 'SVN Omnes', sans-serif;
+}
+:root{
+    --primary-color: #FDF7F2;
+    --text-color: #EDB7AD;
+    --background-color: #FDF7F2;
+}
+
 .body {
     flex-direction: column !important;
     align-items: center;
@@ -15,3 +26,160 @@
     color: #616087;
     font-weight: 700;
 }
+.overlay-box{
+    position: absolute;
+    top: 200px;
+    transform: translateX(100px);
+    width: 30%;
+    height: 70%;
+    background-color: var(--primary-color);
+    border-radius: 5px;
+    z-index: 100;
+    box-shadow: 5px 5px 5px grey;
+}
+.image-left{
+    z-index: 1;
+    position: relative;
+}
+.menu-list{
+    padding-top: 50px;
+}
+.menu-list li{
+    list-style: none;
+    padding-top: 20px;
+    padding-left: 50px;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+.menu-list li a{
+    margin-top: 20px;
+    color: var(--text-color);
+    cursor: pointer;
+    font-weight: 400;
+}
+
+.header-menu img {
+    position: relative;
+}
+.make-style {
+    width: 250px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    background-color: var(--background-color);
+    margin-top: 70px;
+    margin-bottom: 70px;
+    border-radius: round;
+    box-shadow: 10px 5px 5px grey;
+    /* border: 3px solid var(--text-color); */
+}
+.make-style p {
+    padding-top: 10px;
+    font-weight: 500;
+}
+.make-style a {
+    padding-left: 40px;
+    font-size: 20px;
+    color: var(--text-color);
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -20px;
+    margin-left: -20px;
+}
+
+
+.aspect-ratio {
+    position: relative;
+    margin: auto;
+    display: block;
+    width: 80%;
+}
+.aspect-ratio img{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    max-width: 100%;
+    max-height: 100%;
+}
+.scroll {
+    background-image: url(https://file.hstatic.net/200000377411/file/4_copy_c9729c77bc8348d19e3bf9de4bed2c34.png);
+}
+.list-banner {
+    display: flex;
+    align-items: center;
+
+}
+.scroll-banner {
+    width: 30%;
+}
+
+.scroll-banner-right {
+   
+}
+
+.title-selling {
+    padding-left: 25px;
+    padding-top: 10px;
+    width: 300px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    margin-left: 20px;
+    border-radius: 100px;
+    border: 3px solid var(--text-color);
+}
+.title-selling a {
+    font-size: 25px;
+    color: var(--text-color);
+    font-weight: 500;
+}
+.collections{
+    margin-bottom: 70px;
+}
+.collections .container .list-items {
+    display: flex;
+    width: 100%;
+    cursor: pointer;
+}
+.collections .container .list-items .image-container .name{
+    display: flex;
+    padding-left: 140px;
+    color: black;
+}
+
+
+.collections .container .list-items .image-container .desc{
+    display: flex;
+    padding-left: 170px;
+}
+.title-arrivals{
+    padding-left: 25px;
+    padding-top: 10px;
+    width: 230px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    margin-top: 70px;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    border-radius: 100px;
+    border: 3px solid var(--text-color);
+}
+
+.title-arrivals a {
+    font-size: 25px;
+    color: var(--text-color);
+    font-weight: 500; 
+}
+
+@media (min-width: 992px){
+    .list-banner .scroll-banner-left {
+        padding-right: 46px;
+    }
+}
+
