--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -10,13 +10,14 @@
 }
 
 
-.right {
+.right, .left {
     height: 100%;
     display: flex;
     justify-content: space-between;
     flex: 1;
     align-items: center;
 }
+
 .hover-decor {
     position: relative;
 }
