--- a/src/pages/styles/styles.css
+++ b/src/pages/styles/styles.css
@@ -5,3 +5,14 @@
     height: 550px;
     padding: 30px 60px;
 }
+
+#down-icon {
+    cursor: pointer;
+    transform: translateY(0);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  #down-icon.clicked {
+    transform: translateY(20px); /* Adjust the distance for the downward motion */
+  }
+  
