--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -20,17 +20,64 @@
 .hover-decor {
     position: relative;
 }
-.hover-decor::before {
+
+.image-container {
+    position: relative;
+    cursor: pointer;
+    display: inline-block; 
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .hover-decor .message{
     position: absolute;
-    content: "";
-    height: 2px;
-    width: 20px;
-    background-color: pink;
-    bottom: 0px;
+    bottom: -35px;
     left: 50%;
     transform: translateX(-50%);
+    background-color: #FDF7F2; 
+    padding: 5px 5px 10px 5px; 
+    border: 1px solid #ccc; 
+    border-radius: 20px; 
     display: none;
-}
-.hover-decor:hover::before {
-    display: block !important;
-}
+    width:80px;
+    text-align: center;
+    font-size:12px; 
+    color:black;
+    z-index:10;
+  }
+  .search-bar {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #FDF7F2; 
+    padding: 5px 5px 10px 5px; 
+    border: 1px solid #ccc; 
+    border-radius: 20px; 
+    display: flex;
+    width:160px;
+    text-align: center;
+    font-size:12px; 
+    color:black;
+    z-index:10;
+  }
+  .shopping{
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #FDF7F2; 
+    padding: 5px 5px 10px 5px; 
+    border: 1px solid #ccc; 
+    border-radius: 20px; 
+    display: flex;
+    width:163px;
+    text-align: center;
+    font-size:12px; 
+    color:black;
+    z-index:10;
+  }
+
+  .image-container:hover .message {
+    display: block;
+  }
