--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -39,15 +39,15 @@
     border: 1px solid #ccc; 
     border-radius: 20px; 
     display: none;
-    width:80px;
+    width:67px;
     text-align: center;
     font-size:12px; 
     color:black;
     z-index:10;
   }
-  .search-bar {
+  .hover-decor .search{
     position: absolute;
-    bottom: -40px;
+    bottom: -35px;
     left: 50%;
     transform: translateX(-50%);
     background-color: #FDF7F2; 
@@ -55,15 +55,16 @@
     border: 1px solid #ccc; 
     border-radius: 20px; 
     display: flex;
-    width:160px;
+    width:130px;
     text-align: center;
     font-size:12px; 
     color:black;
     z-index:10;
   }
-  .shopping{
+  
+  .hover-decor .shopping{
     position: absolute;
-    bottom: -40px;
+    bottom: -35px;
     left: 50%;
     transform: translateX(-50%);
     background-color: #FDF7F2; 
@@ -71,13 +72,29 @@
     border: 1px solid #ccc; 
     border-radius: 20px; 
     display: flex;
-    width:163px;
+    width:96px;
     text-align: center;
     font-size:12px; 
     color:black;
     z-index:10;
   }
+  .hover-decor .login{
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #FDF7F2; 
+    padding: 5px 5px 10px 5px; 
+    border: 1px solid #ccc; 
+    border-radius: 20px; 
+    display: flex;
+    width:74px;
+    text-align: center;
+    font-size:12px; 
+    color:black;
+    z-index:10;
 
+  }
   .image-container:hover .message {
     display: block;
   }
