--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -91,6 +91,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 60px;
+    text-decoration: underline;
 }
 
 .radio-buttons {
