--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -39,7 +39,7 @@
     border: 1px solid #ccc; 
     border-radius: 20px; 
     display: none;
-    width:67px;
+    width:75px;
     text-align: center;
     font-size:12px; 
     color:black;
@@ -72,7 +72,7 @@
     border: 1px solid #ccc; 
     border-radius: 20px; 
     display: flex;
-    width:96px;
+    width:110px;
     text-align: center;
     font-size:12px; 
     color:black;
@@ -88,7 +88,7 @@
     border: 1px solid #ccc; 
     border-radius: 20px; 
     display: flex;
-    width:74px;
+    width:85px;
     text-align: center;
     font-size:12px; 
     color:black;
@@ -98,3 +98,13 @@
   .image-container:hover .message {
     display: block;
   }
+  .image-container:hover .login {
+    display: block;
+  }
+  .image-container:hover .shopping {
+    display: block;
+  }
+  .image-container:hover .search {
+    display: block;
+  }
+
