--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -3,7 +3,6 @@
     --text-color: #EDB7AD;
 }
 .footer {
-    margin-top: 30px;
     background-color: var(--primary-color);
 }
 
@@ -46,4 +45,29 @@
 .footer-title h4 {
     padding-top: 10px;
     font-size: 15px;
+}
+
+.footer .input-group {
+    display: block;
+    margin: 0;
+    width: 100%;
+}
+
+.footer input {
+    height: 30px;
+    border: 2px solid #000;
+    width: calc(80% - 90px);
+}
+
+.footer button {
+    position: absolute;
+    right: 50px;
+    top: 0;
+    padding: 0 20px;
+    height: 30px;
+    background: #000;
+    color: #fff;
+    border: 1px solid #000;
+    text-align: center;
+    line-height: 30px;
 }
