--- a/src/layouts/ProductLayout.css
+++ b/src/layouts/ProductLayout.css
@@ -15,13 +15,13 @@
   z-index: 100; */
   padding-top: 50px;
   background-color: var(--nav-color);
+  background-attachment: fixed;
   width: 200px;
   line-height: 50px;
-  height: 1000px;
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 500;
-  
+  padding-bottom: 50px;
 }
 .menu-products-nav a {
   color: var(--menu-color);
