--- a/src/layouts/ProductLayout.css
+++ b/src/layouts/ProductLayout.css
@@ -23,15 +23,32 @@
   font-weight: 500;
   padding-bottom: 50px;
 }
-.menu-products-nav a {
-  color: var(--menu-color);
-  /* position: fixed; */
-   /* z-index: 100; */
-} 
-
 .menu-products-list {
   list-style-type: none;
+  position: sticky;
+  top: 50px; 
+  max-height: calc(100vh - 100px);
+  overflow-y: auto;
 }
+
+.menu-products-list a {
+  text-transform: uppercase;
+  color: #857f7b;
+}
+
+.menu-products-nav {
+  padding-top: 50px;
+  background-color: var(--nav-color);
+  width: 200px;
+  line-height: 50px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
 .products-container {
   flex: 1;
 }
