--- a/src/pages/shopping-cart/shopping-cart.css
+++ b/src/pages/shopping-cart/shopping-cart.css
@@ -21,6 +21,7 @@
 
 .table-cart th,
 .table-cart td {
+  width: 513.61px;
   padding: 10px;
   text-align: left;
 }
@@ -60,7 +61,8 @@
 .item-quantity {
   border: 1px solid #999;
   border-radius: 4px;
-  text-align: center; /* Center-align text in the input */
+  text-align: center;
+  /* Center-align text in the input */
 }
 
 .item-info a {
@@ -87,18 +89,18 @@
 }
 
 .quantity-box {
+
+  width: 92px;
+  border: 1px solid #616087;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
 .qty-btn {
   padding: 0px 10px;
-  background-color: #ccc;
-  border-radius: 4px;
   border: none;
   cursor: pointer;
-  margin: 0 5px;
 }
 
 .list-pageform-cart {
@@ -153,7 +155,8 @@
 }
 
 .quantity-box input {
-  width: 40px;
+  width: 30px;
+  border: none;
 }
 
 .product-quantity {
@@ -193,4 +196,8 @@
 
 .form-control {
   width: 70%;
+}
+
+.cart_icon {
+  width: 250px;
 }
