--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -179,3 +179,14 @@
   font-size: 20px;
   padding-left: 10px;
 }
+
+.checkout-container .item--variant {
+  font-size: 14px;
+  color: #888;
+  margin-top: 5px;
+}
+
+.checkout-container .item--variant span {
+  margin-left: 50px;
+  font-size: 10px;
+}
